Closed
Bug 241171
Opened 22 years ago
Closed 21 years ago
Add error reporting and handling to PerlConnect
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
References
Details
Attachments
(1 file)
|
17.80 KB,
patch
|
shaver
:
review+
|
Details | Diff | Splinter Review |
I hadn't taught dreftool about perl apis, and i can't really teach dreftool
about most of spidermonkey's apis, but there was one line item in dreftool
output for perlconnect:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/js/src/perlconnect/jsperl.c&rev=1.11&mark=346#341
Deref-error: "evalStr"
Summary for /mnt/ibm/mozhack/mozilla/js/src/perlconnect:
===============================
Files: 1
Lines: 1037
Errors: 1
Anyway, I took the time to make perlconnect check both perlembed and
spidermonkey's results.
I'm filing in JavaScript: Engine because I can't find a better choice for
perlconnect. note that perlconnect is not part of seamonkey/gecko.
Attachment #146659 -
Flags: review?(brendan)
Comment 2•21 years ago
|
||
Comment on attachment 146659 [details] [diff] [review]
handle/propagate failures
timeless: I don't have time to review this, so perhaps you can find someone
else who knows the JS API and C well to do the job. This is very low priority
for me, but if it matters to you, it should matter to others.
perlconnect is not owned, and I doubt you are looking to own it in your copious
spare time. Maybe the patch should just land as-is, but I'm not comfortable
rubber-stamping.
/be
Attachment #146659 -
Flags: review?(brendan)
Attachment #146659 -
Flags: review?(shaver)
Comment 3•21 years ago
|
||
Comment on attachment 146659 [details] [diff] [review]
handle/propagate failures
Sure, I'm not sure we even need review for perlconnect. r=shaver.
Attachment #146659 -
Flags: review?(shaver) → review+
*** Bug 274114 has been marked as a duplicate of this bug. ***
Comment 5•21 years ago
|
||
looks like this patch was checked in 2004-12-10 16:50
mozilla/js/src/perlconnect/jsperl.c 1.12
can this bug be marked fixed now?
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•