Bug 241171 Add error reporting and handling to PerlConnect r=shaver